add links to a privacy policy and terms of service which should be filled-in using branding app templates that override the stock templates in this repository

--- a/templates/base-landing.html
+++ b/templates/base-landing.html
@@ -68,6 +68,7 @@
       <footer>
         <div class="container">
           <p>&copy; GovReady {% now "Y" %}</p>
+          <p><a href="/privacy">Privacy Policy</a> | <a href="/terms-of-service">Terms of Service</a></p>
         </div>
       </footer>
     </div> <!-- /container -->
