--- a/templates/base.html
+++ b/templates/base.html
@@ -188,7 +188,13 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="row">
-                <div class="col-sm-4"><p class="pull-left">&copy; GovReady {% now "Y" %}</p></div>
+                <div class="col-sm-4">
+                  <p class="pull-left">
+                    &copy; GovReady {% now "Y" %}.
+                    <a href="/privacy">Privacy Policy</a>.
+                    <a href="/terms-of-service">Terms of Service</a>.
+                  </p>
+                </div>
                 <div class="col-sm-4">&nbsp;</div>
                 <div class="col-sm-4"><p class="pull-right">ver {{APP_VERSION_STRING}}</p></div>
             </div>
