allow project admins to delete sub-tasks using a new trash icon on task pages
We have had the ability to delete Projects, which is a database-level cascaded deletion of the Project's
root task. Projects are instantiated compliance apps. So users could delete entire instantiations of
apps. But we didn't have the ability to delete other tasks, i.e. tasks that are within compliance apps.

The use case I'm fixing is when there's a module-set question at the top level of an app, e.g. for
creating many POAMs, and where the module-set's answer module is in the same app. Each new answer
creates e.g. a new instance of the module, a new POAM, but there was no way to remove these sub-tasks
from the top-level app's answers.

Actually we used to have a feature to mark tasks as deleted but we had taken out the UI for it. This commit
replaces that defunct code with new working code.

The new delete trash icon marks the Task as deleted and *also* removes it from the data model of answers
by updating any question whose answer included that Task to have a new answer with the same answer but
the deleted Task removed. In other words, deletion is really "unlinking" from whatever task it might have
been an answer to, plus the setting of a deleted_at flag so that we know why the record is dangling. We
also set the new answer's "method" to be "delete", to distinguish the method that the answer was created
from a normal answering of a question in the UI or import/API. This new value for the method field requires
a metadata-only database migration.

Also fixing a typo from 30048a50 that prevented the scripts in task-base.html from being included in module-finished.html.

--- a/templates/task-base.html
+++ b/templates/task-base.html
@@ -47,6 +47,14 @@
 
 
 {% block breadcrumbs %}
+  {% if is_admin %}
+  <div class="pull-right">
+    <a href="#" onclick="return delete_task();">
+      <span class="glyphicon glyphicon-trash" style="color: #BBB;"></span>
+    </a>
+  </div>
+  {% endif %}
+
   {% if not task.project.is_account_project %}
   <li>
     <a href="/">
@@ -108,6 +116,26 @@ function invite_to_transfer_editor() {
       into_task_editorship: {{task.id}}
     });
   return false;
+}
+
+function delete_task() {
+  show_modal_confirm(
+    "Delete Task",
+    "Are you sure you want to delete {{task.title|escapejs}}?",
+    "Delete", function() {
+      ajax_with_indicator({
+          url: "{% url 'delete_task' %}",
+          method: "POST",
+          data: {
+            id: {{task.id}}
+          },
+          keep_indicator_forever: true, // keep the ajax indicator up forever --- it'll go away when we issue the redirect
+          success: function(res) {
+            window.location = "{{task.project.get_absolute_url|escapejs}}";
+          }
+      });
+    });
+  return false; // cancel link
 }
 </script>
 {% endblock %}
